返す値を正しいものに変更
